Q-learning framework 95% done; bugs in physics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ canvas {
 </head>
 <body>
     <canvas>Your browser does not support HTML5 canvas.</canvas>
+    <p id="reward"></p>
     
     <script src="script.js"></script>
 </body>
