--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ canvas {
     <p id="q0"></p>
     <p id="q1"></p>
     <p id="q2"></p>
+    <p>Updates done: <span id="updates">0</span></p>
+    <p>Found goal: <span id="foundGoal">not yet</span></p>
+    <p>States found: <span id="statesFound">0</span>/<span id="NUM_STATES">0</span> (<span id="percentFound">0</span>%)</p>
     
     <script src="script.js"></script>
 </body>
