--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ canvas {
 </head>
 <body>
     <canvas>Your browser does not support HTML5 canvas.</canvas>
+    <textarea id="output" cols="100" rows="30"></textarea>
     
     <script src="script.js"></script>
 </body>
